--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,16 @@
 
 %body
+
+  %h2 The Marlowe Project
+  %p
+    Marlowe is meant to be a workspace for experimenting with visualizing and interacting with web transaction data
+    using D3.  For more information, refer to the 
+    %a{href: "http://github.com/newrelic/marlowe"}
+      Project Readme file.
+  %h2 Experiments
+  %p
+    These is meant to be an index of pages showing different visualizations of datasets.  If you want
+    to add a brand new experiment, feel free to add to the list. 
   %ul
     %li
       %a{href:"datasets/threeway.html"}
