--- a/views/datasets/threeway.haml
+++ b/views/datasets/threeway.haml
@@ -270,14 +270,14 @@
       #timeseries-sect
         %h1 
           Timeseries Plots
-          %img.timeseries.busy{src:'images/busy.gif', style: 'display:none'}
+          %img.timeseries.busy{src:'/images/busy.gif', style: 'display:none'}
         %p 
           Click on any item in the legend to toggle its display
         .timeseries
       #histogram-sect
         %h1 
           Response Time Distribution
-          %img.histogram.busy{src:'images/busy.gif', style: 'display:none'}
+          %img.histogram.busy{src:'/images/busy.gif', style: 'display:none'}
         %p
           Show a histogram with summary bars at the different statistical aggregates: mean, median, 95 percentile, etc
         .histogram
@@ -285,7 +285,7 @@
       #treemap-sect.chart-row-section
         %h1 
           Transaction Breakdown
-          %img.treemap.busy{src:'images/busy.gif', style: 'display:none'}
+          %img.treemap.busy{src:'/images/busy.gif', style: 'display:none'}
         -#%form
           Breakdown by: 
           %label
