--- a/views/datasets/summaryplots.haml
+++ b/views/datasets/summaryplots.haml
@@ -1,70 +1,16 @@
-!!!
 - content_for(:head) do
   %script{type: 'text/javascript', src: "/charts/timeseries.js"}
   %script{type: 'text/javascript', src: "/charts/histogram.js"}
   %script{type: 'text/javascript', src: "/charts/summary_numbers.js"}
   :javascript
-      $data.file = "#{@file}";
-      $data.yMax = #{@y_max};
-      $data.density = #{@density};
-      $data.apdex_t = #{@apdex_t};
-      $data.value_index = #{@value_index};
-      $data.filter = "#{@filter_label}";
-      $data.only = "#{@only ? '1' : '0'}";
+    $data.file = "#{@file}";
+    $data.yMax = #{@y_max};
+    $data.density = #{@density};
+    $data.apdex_t = #{@apdex_t};
+    $data.value_index = #{@value_index};
+    $data.filter = "#{@filter_label}";
+    $data.only = "#{@only ? '1' : '0'}";
 
-      function refreshData() {
-        form = d3.select("form")
-        $data.yMax = d3.select("input#y_max").node().value;
-        $data.density = d3.select("input#density").node().value;
-        $data.apdex_t = d3.select("input#apdex_t").node().value;
-        $data.filter = d3.select("select#filter").node().selectedOptions[0].value;
-        var nextFile = d3.select("select#filename").node().selectedOptions[0].value;
-        var switchedFile = nextFile != $data.file
-        if (switchedFile) {
-            $data.file = nextFile;
-            $data.filter = "";
-            $data.selectedBucket = -1;
-            $data.selectedTimeslice = -1;
-            showSelection();
-        }
-        $data.value_index = (d3.select("input#enduser").node().checked ? 3 : 4);
-        $data.only = d3.select("input#only").node().checked ? "1" : "0";
-        loadCharts(switchedFile);     
-        return false;
-      }
-      function loadCharts(switchedFile) {
-        d3.selectAll("img.busy").style("display", "inline");
-        d3.json("/data/aggregate/"+$data.file+"?" + 
-          "value_index=" + $data.value_index + "&" +
-          "apdex_t=" + $data.apdex_t + "&" +
-          "buckets=" + ($data.density * $data.width / $data.height) + "&" +
-          "filter=" + $data.filter + "&" +
-          "density=" + $data.density + "&" +
-          "value_index=" + $data.value_index + "&" +
-          "y_max=" + $data.yMax + "&" +
-          "only=" + $data.only,
-          
-          function(error, data) {
-            // calculate the maximum bucket for all the histograms.  This will help
-            // us keep the y scale the same
-            $data.bucketMax = 0;
-            // The first bucket is the summary for the entire time range
-            $data.summaryTimeslice = data.shift();
-            $data.summaryTimeslice.time = new Date($data.summaryTimeslice.time);
-            data.forEach(function(d) {
-                // translate the timestamp into a date for display on the x axis.
-                d.time = new Date(d.time);
-                $data.bucketMax = d3.max([$data.bucketMax, d.bucket_max]);
-            });
-            $data.timeslices = data;
-            $data.dispatch.newTimesliceData();
-          });
-
-        d3.select("input#enduser").attr("checked", $data.value_index == 3 ? 'true' : null);
-        d3.select("input#appserver").attr("checked", $data.value_index == 4 ? 'true' : null);
-        d3.select("input#only").attr("checked", $data.only == "1" ? 'true' : null);
-        d3.select("input#except").attr("checked", $data.only == "0" ? 'true' : null);
-      }
 
   :css
        body {
@@ -176,4 +122,4 @@
   timeseriesInit(d3.select("div#timeseries"));
   histogramInit(d3.select("div#histogram"));
   summaryInit(d3.select("div#summary-values-sect"));
-  loadCharts(true);
+  $data.dispatch.reloadData();
