--- a/views/datasets/threeway.haml
+++ b/views/datasets/threeway.haml
@@ -35,55 +35,8 @@
     $data.filter = "#{@filter_label}";
     $data.only = "#{@only ? '1' : '0'}";
 
-    function refreshData() {
-      form = d3.select("form")
-      $data.yMax = d3.select("input#y_max").node().value;
-      $data.density = d3.select("input#density").node().value;
-      $data.apdex_t = d3.select("input#apdex_t").node().value;
-      $data.filter = d3.select("select#filter").node().selectedOptions[0].value;
-      var nextFile = d3.select("select#filename").node().selectedOptions[0].value;
-      var switchedFile = nextFile != $data.file
-      if (switchedFile) {
-          $data.file = nextFile;
-          $data.filter = "";
-          $data.selectedBucket = -1;
-          $data.selectedTimeslice = -1;
-          showSelection();
-      }
-      $data.value_index = (d3.select("input#enduser").node().checked ? 3 : 4);
-      $data.only = d3.select("input#only").node().checked ? "1" : "0";
-      loadCharts(switchedFile);     
-      return false;
-    }
-    function loadCharts(switchedFile) {
+    function loadTreemapData(switchedFile) {
       d3.selectAll("img.busy").style("display", "inline");
-      d3.json("/data/aggregate/"+$data.file+"?" + 
-        "value_index=" + $data.value_index + "&" +
-        "apdex_t=" + $data.apdex_t + "&" +
-        "buckets=" + ($data.density * $data.width / $data.height) + "&" +
-        "filter=" + $data.filter + "&" +
-        "density=" + $data.density + "&" +
-        "value_index=" + $data.value_index + "&" +
-        "y_max=" + $data.yMax + "&" +
-        "only=" + $data.only,
-
-        function(error, data) {
-          // calculate the maximum bucket for all the histograms.  This will help
-          // us keep the y scale the same
-          $data.bucketMax = 0;
-          // The first bucket is the summary for the entire time range
-          $data.summaryTimeslice = data.shift();
-          $data.summaryTimeslice.time = new Date($data.summaryTimeslice.time);
-          data.forEach(function(d) {
-              // translate the timestamp into a date for display on the x axis.
-              d.time = new Date(d.time);
-              $data.bucketMax = d3.max([$data.bucketMax, d.bucket_max]);
-          });
-          $data.timeslices = data;
-          $data.dispatch.newTimesliceData();
-        });
-
-      var numCols = Math.floor($data.density * ($data.width / $data.height));
       d3.json("/data/treemap/"+$data.file + "?" +
         "value_index="+$data.value_index + "&" +
         "only=" + $data.only + "&" +
@@ -91,7 +44,7 @@
         "filter=" + $data.filter + "&" +
         "density=" + $data.density + "&" +
         "y_max=" + $data.yMax + "&" +
-        "cols="+numCols, 
+        "cols="+ Math.floor($data.density * ($data.width / $data.height)), 
         function(error, data) {
           $data.treemapRoot = data.tree;
           if (switchedFile) {
@@ -109,10 +62,6 @@
           }
           $data.dispatch.newTreemapData();
       });
-      d3.select("input#enduser").attr("checked", $data.value_index == 3 ? 'true' : null);
-      d3.select("input#appserver").attr("checked", $data.value_index == 4 ? 'true' : null);
-      d3.select("input#only").attr("checked", $data.only == "1" ? 'true' : null);
-      d3.select("input#except").attr("checked", $data.only == "0" ? 'true' : null);
     }
 
   :css
@@ -240,4 +189,5 @@
   timeseriesInit(d3.select("#timeseries-sect > div.timeseries"));
   histogramInit(d3.select("#histogram-sect > div.histogram"));
   treemapInit(d3.select("div#treemap-sect"));
-  loadCharts(true);
+  $data.dispatch.on("reloadData.treemap", loadTreemapData);
+  $data.dispatch.reloadData();
