--- a/views/datasets/summaryplots.haml
+++ b/views/datasets/summaryplots.haml
@@ -95,7 +95,7 @@
       }
 
 .row
-  .span6
+  #timeseries-sect.span6
     %h1 
       Timeseries Plots
       %img.timeseries.busy{src:'/images/busy.gif', style: 'display:none'}
@@ -119,7 +119,9 @@
     #summary-values-sect
 
 :javascript
-  timeseriesInit(d3.select("div#timeseries"));
+  // This defines the attributes of the timeslice record that are in the legend of the plot.
+  var plots = ["mean", "mode", "median", "apdex", "rpm"];
+  timeseriesInit(d3.select("#timeseries"), plots);
   histogramInit(d3.select("div#histogram"));
   summaryInit(d3.select("div#summary-values-sect"));
   $data.dispatch.reloadData();
